[build-system]
requires = ["poetry-core=1.1.13"]
build-backend = "poetry.core.masonry.api"

# --- Poetry config --------------------------------------------- #
[tool.poetry]
name = "{{cookiecutter.pkg_name}}"
version = "0.1.0"
description = "Python Application Template Getting Started"
authors = ["{{cookiecutter.author}}"]
license = "{{ cookiecutter.open_source_license }}"


[tool.poetry.dependencies]
python = ">=3.8, <3.11"
numpy = "^1.21.2"
pytest = "^6.2.5"
SQLAlchemy = "^1.4.23"
psycopg2-binary = "^2.9.1"
sqlalchemy-json = "^0.4.0"
requests = "^2.26.0"
pyaml = "^21.8.3"
pandas = "^1.3.3"
Unidecode = "^1.3.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
flake8-isort = "ˆ4.0.0"
flake8-builtins = "ˆ1.5.3"
flake8-bandit = "ˆ2.1.2"
flake8-mypy = "ˆ17.8.0"
autopep8 = "ˆ1.5.7"
pylint = "ˆ2.8.2"
bandit = "ˆ1.7.0"
black = "ˆ21.5b0"
autoflake = "^1.3.1"
mypy = "ˆ0.812"
pytest-cov = "^2.8.1"
sqlalchemy-stubs = "^0.3"

sphinx = "^3.5.1"
sphinx-argparse = "^0.2.5"
sphinx-autodoc-typehints = "^1.12.0"
sphinx-rtd-theme = "^1.0.0"
myst-parser = "^0.15.2"

ipython = "^7.28"
commitizen = "^2.20.0"

# --- ISORT config --------------------------------------------- #
[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 120

# --- PyTest config -------------------------------------=------ #
[tool.pytest.ini_options]
markers = [
    "functions: mark test for the base functionalities",
    "core: all about the core",
    "db: all about the database",
    "api: all about the api of the system",
]

# --- Commitizen Release ----------------------------------------- #
[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$major.$minor.$patch$prerelease"
version = "0.1.0"
version_files = [
    "{{cookiecutter.pkg_name}}/__version__.py",
    "pyproject.toml:version"
]
style = [
    ["qmark", "fg:#ff9d00 bold"],
    ["question", "bold"],
    ["answer", "fg:#ff9d00 bold"],
    ["pointer", "fg:#ff9d00 bold"],
    ["highlighted", "fg:#ff9d00 bold"],
    ["selected", "fg:#cc5454"],
    ["separator", "fg:#cc5454"],
    ["instruction", ""],
    ["text", ""],
    ["disabled", "fg:#858585 italic"]
]